--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,6 +4,8 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 footer .icon {
